# Arcis-NVR

./: .gitignore  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
_webui/: CATALOG.md  dist_build.js  dist_import.js  dist_style.css  index.html  main.js  swfobject.js  view1.js
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  juice_jni.cpp
app/src/main/cpp/libjuice/: CMakeLists.txt
app/src/main/cpp/libjuice/src/: udp.c
app/src/main/java/com/arcisai/nvr/: ArcisNvrApp.kt  MainActivity.kt
app/src/main/java/com/arcisai/nvr/data/: ChannelCache.kt  NvrCredentials.kt
app/src/main/java/com/arcisai/nvr/net/: AESEncryption.kt  BackendApi.kt  NetSdkApi.kt  OnvifDiscovery.kt  OnvifMedia.kt  OnvifResolver.kt  PersistentCookieStore.kt  PtzClient.kt  PublisherApi.kt  RtspTlsProxy.kt  SubnetSweep.kt  WsReplayClient.kt
app/src/main/java/com/arcisai/nvr/p2p/: ChunkProtocol.kt  JuiceAgent.kt  RemoteSession.kt  SignalingClient.kt
app/src/main/java/com/arcisai/nvr/ui/: Tab.kt
app/src/main/java/com/arcisai/nvr/ui/screens/: ConfigScreens.kt  DeviceInfoScreen.kt  DiskScreen.kt  EncodingScreen.kt  GeneralScreen.kt  ImageColorScreen.kt  LiveScreen.kt  LiveTabScreen.kt  LoginScreen.kt  LogsScreen.kt  MaintenanceScreen.kt  ManageScreen.kt  MyNvrsScreen.kt  NetworkScreen.kt  (+13 more)
app/src/main/java/com/arcisai/nvr/viewmodel/: NvrViewModel.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
(+1 files in other folders)
